# autocaliweb

./: .dockerignore  .gitignore  Dockerfile  README.md  dev-run.sh  exclude.txt  pyproject.toml
.github/workflows/: dockerhub-build-push-on-push.yml
cps/: __init__.py  admin.py  calibre_db_watcher.py  config_sql.py  db.py  dep_check.py  editbooks.py  embed_helper.py  generated_shelves.py  helper.py  jinjia.py  kobo.py  kobo_sync_status.py  render_template.py  shelf.py  ub.py  web.py
cps/metadata_provider/: scholar.py
cps/static/css/: style.css
cps/static/js/: main.js  shelf.js  table.js
cps/tasks/: convert.py  thumbnail.py
cps/templates/: book_table.html  config_edit.html  detail.html  layout.html  shelf.html  user_edit.html
kobosim/: README.md  __init__.py  __main__.py  pyproject.toml  requirements.txt  setup.sh
kobosim/cli/: __init__.py  main.py
kobosim/core/: __init__.py  client.py  models.py  sync_token.py
kobosim/docs/: KOBOSIM_IMPROVEMENTS.md
kobosim/gui/: __init__.py
scripts/: manual_install_acw.sh  purge_kepubs.py
