[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kobosim"
version = "1.0.0"
description = "Kobo device simulator for testing Autocaliweb sync"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0"}
authors = [
    {name = "Autocaliweb Contributors"}
]
keywords = ["kobo", "ebook", "sync", "simulator", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",  # Better terminal output
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "ruff",
]
gui = [
    "textual>=0.40.0",  # TUI framework
]

[project.scripts]
kobosim = "cli.main:main"

[project.urls]
Repository = "https://github.com/gelbphoenix/autocaliweb"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "core*", "gui*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # Line too long

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
